--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
-# Firebase Configuration
-# Get these values from your Firebase Console > Project Settings > General > Your apps
-VITE_FIREBASE_API_KEY=your_api_key_here
+# Firebase Configuration for Vaidhya Setu Telemedicine Platform
+# Copy this file to .env and update with your actual Firebase config values
+
+VITE_FIREBASE_API_KEY=your_firebase_api_key_here
 VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
-# Development Settings
-VITE_NODE_ENV=development
-
-# Production Settings (for deployment)
-# VITE_NODE_ENV=production
+# Note: All environment variables must use VITE_ prefix for Vite build tool
+# These are used for:
+# - Firebase Authentication (user login)
+# - Firestore Database (real-time data sync)
+# - Firebase Storage (file uploads)
+# - Firebase Analytics (usage tracking)
+# - Firebase Hosting (platform deployment)
