Initialize Firebase configuration and add environment variables support
- Configure Firebase services (Firestore, Functions, Hosting, Data Connect)
- Add comprehensive environment variables support with .env and .env.example
- Create Firebase security rules and indexes
- Add Firebase Functions with Genkit integration
- Add Data Connect configuration for GraphQL API
- Add documentation for environment variables configuration
- Update Firebase configuration files to use environment variables
- Add generated Data Connect client libraries

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,39 @@
 # Firebase Configuration for Vaidhya Setu Telemedicine Platform
-# Copy this file to .env and update with your actual Firebase config values
+# Copy this file to .env and fill in your actual values
+# Note: These are public client-side configuration values
+# Do not put sensitive server-side secrets here
 
+# Firebase Core Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
-VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+VITE_FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain_here
+VITE_FIREBASE_PROJECT_ID=your_firebase_project_id_here
+VITE_FIREBASE_STORAGE_BUCKET=your_firebase_storage_bucket_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id_here
+VITE_FIREBASE_APP_ID=your_firebase_app_id_here
+VITE_FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id_here
 
-# Note: All environment variables must use VITE_ prefix for Vite build tool
-# These are used for:
-# - Firebase Authentication (user login)
-# - Firestore Database (real-time data sync)
-# - Firebase Storage (file uploads)
-# - Firebase Analytics (usage tracking)
-# - Firebase Hosting (platform deployment)
+# Application Configuration
+VITE_APP_NAME=Your Application Name
+VITE_APP_VERSION=1.0.0
+VITE_APP_ENVIRONMENT=development|production
+
+# API Configuration
+VITE_API_BASE_URL=https://your-domain.com
+VITE_API_TIMEOUT=10000
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=true|false
+VITE_ENABLE_VIDEO_CALLS=true|false
+VITE_ENABLE_NOTIFICATIONS=true|false
+VITE_ENABLE_CHAT=true|false
+
+# WebRTC Configuration
+VITE_WEBRTC_ICE_SERVERS=[{"urls":"stun:stun.l.google.com:19302"}]
+
+# Development Configuration
+VITE_DEV_MODE=true|false
+VITE_DEBUG_LOGS=true|false
+
+# Additional Configuration (Add as needed)
+# VITE_CUSTOM_API_KEY=your_custom_api_key
+# VITE_THIRD_PARTY_SERVICE_URL=your_third_party_service_url
