--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,18 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": {
+    "source": "functions",
+    "codebase": "default",
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ]
+  },
   "hosting": {
     "public": "dist",
     "ignore": [
@@ -32,5 +46,8 @@
         ]
       }
     ]
+  },
+  "dataconnect": {
+    "source": "dataconnect"
   }
 }
