--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase:serve": "npm run build && firebase serve"
   },
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
