Enhance Firebase configuration with environment variables and push notifications support

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ VITE_ENABLE_CHAT=true|false
 # WebRTC Configuration
 VITE_WEBRTC_ICE_SERVERS=[{"urls":"stun:stun.l.google.com:19302"}]
 
+# Firebase Messaging Configuration
+# VAPID key is required for Firebase Cloud Messaging
+# Generate one at: https://console.firebase.google.com/project/_/settings/cloudmessaging
+VITE_FIREBASE_VAPID_KEY=your_firebase_cloud_messaging_vapid_key
+
 # Development Configuration
 VITE_DEV_MODE=true|false
 VITE_DEBUG_LOGS=true|false
