--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
     "VITE_FIREBASE_STORAGE_BUCKET": "@vite_firebase_storage_bucket",
     "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite_firebase_messaging_sender_id",
     "VITE_FIREBASE_APP_ID": "@vite_firebase_app_id",
-    "VITE_FIREBASE_MEASUREMENT_ID": "@vite_firebase_measurement_id"
+    "VITE_FIREBASE_MEASUREMENT_ID": "@vite_firebase_measurement_id",
+    "VITE_FIREBASE_VAPID_KEY": "@vite_firebase_vapid_key"
   }
 }
