--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,5 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "framework": "vite",
-  "regions": ["iad1"],
-  "env": {
-    "VITE_FIREBASE_API_KEY": "@vite_firebase_api_key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@vite_firebase_auth_domain",
-    "VITE_FIREBASE_PROJECT_ID": "@vite_firebase_project_id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@vite_firebase_storage_bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite_firebase_messaging_sender_id",
-    "VITE_FIREBASE_APP_ID": "@vite_firebase_app_id",
-    "VITE_FIREBASE_MEASUREMENT_ID": "@vite_firebase_measurement_id",
-    "VITE_FIREBASE_VAPID_KEY": "@vite_firebase_vapid_key"
-  }
+  "regions": ["iad1"]
 }
