Remove duplicate emergency consultation option and update location from Andhra Pradesh to Nabha

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vaidhya-setu-telemedicine",
+  "name": "clinic-pro-telemedicine",
   "private": true,
   "version": "1.0.0",
-  "description": "Telemedicine platform connecting rural health centers with specialist doctors",
+  "description": "Telemedicine platform connecting rural health centers with specialist doctors - Clinic Pro",
   "type": "module",
   "scripts": {
     "dev": "vite",
